objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Status_Indicator_URL_Public__c</fullName>
        <formula>CASE(TEXT(MFG_IDO_IOT_Status__c), 
&quot;Normal&quot;, 
&quot;https://mfg-ido.s3.us-east-2.amazonaws.com/Images/Miscellaneous+IDO+Images/Icon+-+Good.png&quot;, 

&quot;Error&quot;,
&quot;https://mfg-ido.s3.us-east-2.amazonaws.com/Images/Miscellaneous+IDO+Images/Icon-+General+Bad.png&quot;, 
 
&quot;https://mfg-ido.s3.us-east-2.amazonaws.com/Images/Miscellaneous+IDO+Images/Icon-+General+Warning.png&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator URL Public</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Products__c</fullName>
        <label>Suggested Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product 1</fullName>
                </value>
                <value>
                    <fullName>Product 2</fullName>
                </value>
                <value>
                    <fullName>Product 3</fullName>
                </value>
                <value>
                    <fullName>Training Services</fullName>
                </value>
                <value>
                    <fullName>Technical Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Indicator__c</fullName>
        <formula>IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Entitlement_Status__c, 
&quot;Expired&quot;, &quot;015Hr000003iK9b&amp;oid=00DHr0000010MFf&quot;, 
&quot;Active&quot;,&quot;015Hr000003iK9Z&amp;oid=00DHr0000010MFf&quot;, 
&quot;30 Day Warning&quot;, &quot;015Hr000003iK9a&amp;oid=00DHr0000010MFf&quot;, 
&quot;015Hr000003iK9Z&amp;oid=00DHr0000010MFf&quot;),&quot;Active Contract?&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarranyIndPublic__c</fullName>
        <formula>CASE( Entitlement_Status__c, 

&quot;Expired&quot;, &quot;https://mfg-ido.s3.us-east-2.amazonaws.com/Images/Miscellaneous+IDO+Images/Icon-+General+Bad.png&quot;, 

&quot;Active&quot;,&quot;https://mfg-ido.s3.us-east-2.amazonaws.com/Images/Miscellaneous+IDO+Images/Icon+-+Good.png&quot;, 

&quot;30 Day Warning&quot;, &quot;https://mfg-ido.s3.us-east-2.amazonaws.com/Images/Miscellaneous+IDO+Images/Icon-+General+Warning.png&quot;,

&quot;https://mfg-ido.s3.us-east-2.amazonaws.com/Images/Miscellaneous+IDO+Images/Icon-+General+Bad.png&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WarranyIndPublic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLineBalanceUpdated__c</fullName>
        <description>The time when invoice line balances was last updated successfully.</description>
        <inlineHelpText>The time when invoice line balances was last updated successfully.</inlineHelpText>
        <label>Invoice Line Balance Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLineBalance__c</fullName>
        <description>The sum of all posted invoice line balances for this asset.</description>
        <inlineHelpText>The sum of all posted invoice line balances for this asset.</inlineHelpText>
        <label>Invoice Line Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>Warranty_Indicator__c</columns>
        <columns>Entitlement_Status__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Consumer_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Warranty_Indicator__c</columns>
        <columns>Entitlement_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012Hr000000gxes</value>
        </filters>
        <label>All Consumer Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Enterprise_Assets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ASSET.PURCHASE_DATE</columns>
        <columns>ASSET.USAGE_END_DATE</columns>
        <columns>ASSET.PARENT</columns>
        <columns>Warranty_Indicator__c</columns>
        <columns>Entitlement_Status__c</columns>
        <columns>Scheduled_Servicing__c</columns>
        <columns>Service_Frequency_Weeks__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Asset</value>
        </filters>
        <label>All Enterprise Assets</label>
    </listViews>
    <listViews>
        <fullName>My_Assets_Comm</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ASSET.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Users_Asset__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Purchased,Shipped,Installed,Registered</value>
        </filters>
        <label>My Registered Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Assets_Company_Comm</fullName>
        <columns>ASSET.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ASSET.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Users_Companys_Asset__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ASSET.STATUS</field>
            <operation>equals</operation>
            <value>Purchased,Shipped,Installed,Registered</value>
        </filters>
        <label>My Company&apos;s Registered Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ohana</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Warranty_Indicator__c</columns>
        <columns>Entitlement_Status__c</columns>
        <columns>ASSET.RECORDTYPE</columns>
        <columns>Location</columns>
        <columns>Asset_Status__c</columns>
        <columns>MFG_IDO_IOT_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>&quot;Ohana, Inc.&quot;</value>
        </filters>
        <filters>
            <field>ASSET.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Asset.Asset</value>
        </filters>
        <label>Ohana</label>
    </listViews>
    <recordTypes>
        <fullName>Asset</fullName>
        <active>true</active>
        <description>For all standard Assets.</description>
        <label>Asset</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>